--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,273 +1,291 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-  <title>Home Page</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/styles.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
-  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 
-  <style>
+    <style>
 
-    *{
-      margin: 0;
-      padding: 0;
-     /* font-family: poppins;
+        * {
+            margin: 0;
+            padding: 0;
+            /* font-family: poppins;
 
-      */
-      box-sizing: border-box;
-    }
+             */
+            box-sizing: border-box;
+        }
 
-    body{
-     /* background: black;
+        body {
+            /* background: black;
 
-      */
-     /* color: #fff;*/
-    }
+             */
+            /* color: #fff;*/
+        }
 
-    .wrapper{
-      padding: 10px 10%;
-    }
-
-
-    #card-area{
-      padding: 50px 0;
-    }
-
-    .box-area{
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-      grid-gap: 40px;
-      margin-top: 50px;
-    }
-
-    .box{
-      border-radius: 10px;
-      position: relative;
-      overflow: hidden;
-      box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
-      transition: transform .5s;
-    }
-
-    .box:hover {
-      transform: scale(1.05);
-    }
-
-    .box img{
-      width: 100%;
-      object-fit: fill;
-      border-radius: 10px;
-      display: block;
-      transistion: transform 0.5s
-    }
-
-    .overlay{
-      height: 0;
-      width: 100%;
-      background: linear-gradient(transparent, #1c1c1c 100% );
-      border-radius: 10px;
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding: 0 40px;
-      text-align: center;
-      font-size: 14px;
-      transition: height 0.5s;
-    }
-
-    .overlay h3{
-      font-weight: 500;
-      margin-bottom: 5px;
-      margin-top: 2%;
-      font-family: bebas neue;
-      font-size: 30px;
-      letter-spacing: 2px;
-    }
+        .wrapper {
+            padding: 10px 10%;
+        }
 
 
-    .overlay a{
-      margin-top: 10px;
-      color: #262626;
-      text-decoration: none;
-      font-size: 14px;
-      background: #fff;
-      border-radius: 50px;
-      text-align: center;
-      padding: 5px 15px;
-    }
+        #card-area {
+            padding: 50px 0;
+        }
 
-    .boxLhover img{
-      transform: scale(1.2);
-    }
+        .box-area {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            grid-gap: 40px;
+            margin-top: 50px;
+        }
 
-    .box:hover .overlay{
-      height: 100%;
-    }
+        .box {
+            border-radius: 10px;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+            transition: transform .5s;
+        }
 
-    h1{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 50px;
-      color: white;
-      font-weight: bold;
-      -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
-    }
+        .box:hover {
+            transform: scale(1.05);
+        }
 
-    p{
-      font-size: 12px;
-      font-family: poppins;
-      color: white;
-      font-weight: bold;
-    }
+        .box img {
+            width: 100%;
+            object-fit: fill;
+            border-radius: 10px;
+            display: block;
+            transistion: transform 0.5s
+        }
 
-    h3{
-      font-weight: bold;
-      font-family: poppins;
-      color: white;
-      font-size: 25px;
-    }
+        .overlay {
+            height: 0;
+            width: 100%;
+            background: linear-gradient(transparent, #1c1c1c 100%);
+            border-radius: 10px;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            padding: 0 40px;
+            text-align: center;
+            font-size: 14px;
+            transition: height 0.5s;
+        }
 
-  </style>
+        .overlay h3 {
+            font-weight: 500;
+            margin-bottom: 5px;
+            margin-top: 2%;
+            font-family: bebas neue;
+            font-size: 30px;
+            letter-spacing: 2px;
+        }
 
-  <style>
-    /* Dropdown Button */
-    .filter-btn {
-      background-color: red; /* Red button */
-      color: white; /* White text */
-      border: 2px solid white; /* White border */
-      padding: 10px 15px;
-      font-weight: bold;
-      transition: background 0.3s, box-shadow 0.3s;
-    }
 
-    /* Hover Effect */
-    .filter-btn:hover {
-      background-color: darkred;
-      box-shadow: 0 0 10px red;
-    }
+        .overlay a {
+            margin-top: 10px;
+            color: #262626;
+            text-decoration: none;
+            font-size: 14px;
+            background: #fff;
+            border-radius: 50px;
+            text-align: center;
+            padding: 5px 15px;
+        }
 
-    /* Dropdown Menu */
-    .dropdown-menu {
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2), 0 6px 20px rgba(0,0,0,0.19);
-      border: 1px solid black;
-      background-color: white;
-    }
+        .boxLhover img {
+            transform: scale(1.2);
+        }
 
-    .dropdown-item {
-      color: black ;
-      font-weight: bold;
-      padding: 10px 15px;
-      text-align: left;
-      transition: background 0.3s;
-    }
+        .box:hover .overlay {
+            height: 100%;
+        }
 
-    .dropdown-item:hover {
-      background: #f0f0f0;
-      color: black ;
-    }
-  </style>
+        h1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
+        }
 
-  <style>
+        p {
+            font-size: 12px;
+            font-family: poppins;
+            color: white;
+            font-weight: bold;
+        }
 
-    body{
-      margin: 0;
-    }
+        h3 {
+            font-weight: bold;
+            font-family: poppins;
+            color: white;
+            font-size: 25px;
+        }
 
-    #background{
-      background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
-      height: 100vh;
-      width: 100%;
-      background-size: cover;
-      background-position: center center;
-      position: fixed;
-      top: 0;
-      z-index: -1;
-    }
+    </style>
 
-    .message{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: red;
-      font-weight: bold;
-      margin-bottom: 50px;
-      font-family: poppins;
-    }
-  </style>
+    <style>
+        /* Dropdown Button */
+        .filter-btn {
+            background-color: red; /* Red button */
+            color: white; /* White text */
+            border: 2px solid white; /* White border */
+            padding: 10px 15px;
+            font-weight: bold;
+            transition: background 0.3s, box-shadow 0.3s;
+        }
+
+        /* Hover Effect */
+        .filter-btn:hover {
+            background-color: darkred;
+            box-shadow: 0 0 10px red;
+        }
+
+        /* Dropdown Menu */
+        .dropdown-menu {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+            border: 1px solid black;
+            background-color: white;
+        }
+
+        .dropdown-item {
+            color: black;
+            font-weight: bold;
+            padding: 10px 15px;
+            text-align: left;
+            transition: background 0.3s;
+        }
+
+        .dropdown-item:hover {
+            background: #f0f0f0;
+            color: black;
+        }
+    </style>
+
+    <style>
+
+        body {
+            margin: 0;
+        }
+
+        #background {
+            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+            height: 100vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            position: fixed;
+            top: 0;
+            z-index: -1;
+        }
+
+        .message {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: green;
+            font-weight: bold;
+            margin-bottom: 50px;
+            font-family: poppins;
+        }
+
+        .messageDelete {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: red;
+            font-weight: bold;
+            margin-bottom: 50px;
+            font-family: poppins;
+        }
+    </style>
 </head>
 
 <body>
 
 <div th:if="${#ctx.session.loggedInUser != null}">
-<!-- Include the menu bar fragment -->
-<div th:replace="~{fragments/menu :: menu-bar}"></div>
+    <!-- Include the menu bar fragment -->
+    <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
-  <div id="background"></div>
+    <div id="background"></div>
 
-<div>
-  <h1>Most Popular Movies</h1>
-</div>
-
-
-  <div id="message" class="message" th:text="${message}"></div>
-
-  <div class="dropdown" style="margin-top: 50px; margin-left: 50px;">
-    <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Filter Movies
-    </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="/highestRated">Highest Rated Movies</a></li>
-      <li><a class="dropdown-item" href="/lowestRated">Lowest Rated Movies</a></li>
-      <li><a class="dropdown-item" href="/userReviews">View My Reviews</a></li>
-    </ul>
-  </div>
-
-  <div id="card-area">
-    <div class="wrapper">
-      <div class="box-area">
-        <div th:each="movie : ${movies}">
-        <div class="box">
-          <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}"  alt="">
-          <div class="overlay">
-            <h3 th:text="${movie.getTitle()}"> Mountain</h3>
-            <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;" ></p>
-
-            <div class="action_btn" style="margin: 0 auto; display: inline;">
-
-            <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
-            <a th:href="@{/addMovieFavList(movieId=${movie.id}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, release_date=${movie.getRelease_date()})}"class="remove_cart" rel="2" title="Add to favourite list" >
-              <i class="fa fa-heart" style="color:red"></i>
-            </a>
-            </div>
-
-            <a th:href="@{/writeReview(movieId=${movie.id}, movieTitle=${movie.title})}" class="btn btn-danger btn-sm">
-              Write a Review
-            </a>
-
-          </div>
-        </div>
-        </div>
-
-      </div>
+    <div>
+        <h1>Most Popular Movies</h1>
     </div>
-  </div>
+
+    <div class="action_btn" style="margin: 0 auto; display: inline;">
+    <div id="message" class="message" th:text="${message}"></div>
+
+    <div id="messageDelete" class="messageDelete" th:text="${messageDelete}"></div>
+
+        </div>
 
 
 
+    <div class="dropdown" style="margin-top: 50px; margin-left: 50px;">
+        <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Filter Movies
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/highestRated">Highest Rated Movies</a></li>
+            <li><a class="dropdown-item" href="/lowestRated">Lowest Rated Movies</a></li>
+            <li><a class="dropdown-item" href="/userReviews">View My Reviews</a></li>
+        </ul>
+    </div>
+
+    <div id="card-area">
+        <div class="wrapper">
+            <div class="box-area">
+                <div th:each="movie : ${movies}">
+                    <div class="box">
+                        <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}" alt="">
+                        <div class="overlay">
+                            <h3 th:text="${movie.getTitle()}"> Mountain</h3>
+                            <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;"></p>
+
+                                <div class="action_btn" style="margin: 0 auto; display: inline;">
+
+                                    <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
+
+                                    <a th:href="@{/addMovieFavList(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, release_date=${movie.getRelease_date()})}"
+                                       class="remove_cart" rel="2" title="Add to favourite list">
+                                        <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
+                                    </a>
+                                </div>
+
+                            <a th:href="@{/writeReview(movieId=${movie.id}, movieTitle=${movie.title})}">
+                                Write a Review
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
-  </div>
+</div>
 
 </body>
 </html>
