--- a/src/main/resources/templates/movie_recs.html
+++ b/src/main/resources/templates/movie_recs.html
@@ -183,6 +183,27 @@
     .dropdown-menu{
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     }
+
+    .message {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: green;
+      font-weight: bold;
+      margin-bottom: 50px;
+      font-family: poppins;
+    }
+
+    .messageDelete {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: red;
+      font-weight: bold;
+      margin-bottom: 50px;
+      font-family: poppins;
+    }
+
   </style>
 </head>
 
@@ -207,7 +228,12 @@
     <h1 th:text=" | Random Movie Reccomendations for ${#ctx.session.loggedInUser.getUsername()} |"></h1>
   </div>
 
+  <div class="action_btn" style="margin: 0 auto; display: inline;">
+    <div id="message" class="message" th:text="${message}"></div>
 
+    <div id="messageDelete" class="messageDelete" th:text="${messageDelete}"></div>
+
+  </div>
 
   <div id="card-area">
     <div class="wrapper">
@@ -218,7 +244,14 @@
             <div class="overlay">
               <h3 th:text="${movie.getTitle()}"> Mountain</h3>
               <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;"></p>
-              <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
+              <div class="action_btn" style="margin: 0 auto; display: inline;">
+                <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
+
+                <a th:href="@{/addMovieFavList5(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()})}"
+                   class="remove_cart" rel="2">
+                  <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
