--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -55,7 +55,7 @@
   <nav class="navbar navbar-expand-lg" style="background-color: #D70040">
     <div class="container-fluid">
 
-      <a class="navbar-brand" th:href="@{/}">Screen Safari</a>
+      <a class="navbar-brand">Screen Safari</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -116,7 +116,6 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" th:href="@{/adminPanel_index}">Admin Movie Product Panel</a></li>
               <li><a class="dropdown-item" th:href="@{/adminPanelStats}">Statistics</a></li>
-              <li><a class="dropdown-item" th:href="@{/revenue}">Revenue</a></li>
             </ul>
           </li>
 
