--- a/src/main/resources/templates/subscription_index.html
+++ b/src/main/resources/templates/subscription_index.html
@@ -132,10 +132,9 @@
     }
 
 
-    p, label, input, li, ul{
+    p, label, input{
 
       font-family: poppins;
-      font-weight: bold;
       font-size: 15px;
       color: white;
     }
