--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,16 +3,14 @@
 <head>
     <title>Home Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <!--<link rel="stylesheet" href="/css/styles.css"/>-->
+    <!--<link rel="stylesheet" href="/css/chatIndex.css" />-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-
-
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 
     <style>
@@ -163,7 +161,7 @@
             z-index: -1;
         }
 
-        .message {
+        .message1 {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -198,7 +196,7 @@
     </div>
 
     <div class="action_btn" style="margin: 0 auto; display: inline;">
-    <div id="message" class="message" th:text="${message}"></div>
+    <div id="message1" class="message1" th:text="${message}"></div>
 
     <div id="messageDelete" class="messageDelete" th:text="${messageDelete}"></div>
 
@@ -228,7 +226,8 @@
                             <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;"></p>
 
                                 <div class="action_btn" style="margin: 0 auto; display: inline;">
-                                    <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
+                                    <!--<a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>-->
+                                    <a th:href="@{/getAllChatMessage(id=${movie.getId()})}">View Videos & Live Chat Room</a>
                                     <a th:href="@{/addMovieFavList(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, release_date=${movie.getRelease_date()})}"
                                        class="remove_cart" rel="2">
                                         <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
@@ -249,6 +248,6 @@
 
 
 </div>
-
+<script src="/css/js/chatIndex2.js"></script>
 </body>
 </html>
