--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -231,7 +231,14 @@
         <ul class="dropdown-menu" style=" box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)">
             <li><a class="three" th:href="@{/movieRecs}" style="text-decoration:none"><p class="two" th:text="${recs}"></p></a></li>
             <li><a class="three" th:href="@{/movieRecsGenreCommon}" style="text-decoration:none"><p class="two" th:text="${recs2}"></p></a></li>
+            <li>
+                <a class="three" th:href="@{/friendFavLists}" style="text-decoration:none">
+                    <p class="two">View Friends' Favourite Lists</p>
+                </a>
+            </li>
+
         </ul>
+
     </div>
 
     <div th:if="${#ctx.session.favoriteLists == null}">
