--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -408,7 +408,7 @@
 <div id="username-page">
   <div class="username-page-container">
     <h1 class="title" style="color: black">The Chatroom</h1>
-    <form id="usernameForm" name="usernameForm">
+    <form  id="usernameForm" name="usernameForm">
       <div class="form-group">
         <input type="hidden" id="name" th:value="${#ctx.session.loggedInUser.getUsername()}" placeholder="Username" autocomplete="off" class="form-control" />
       </div>
@@ -447,7 +447,8 @@
     <form id="messageForm" name="messageForm">
       <div class="form-group">
         <div class="input-group clearfix">
-          <input style="margin-top:0px; " type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+          <input style="margin-top:0px; " type="text" id="message" name="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+          <input style="margin-top:0px; " type="text" th:value="${chat_room_id}" id="room" name="room" placeholder="Type a message..." autocomplete="off" class="hidden"/>
           <button style="margin-top:0px; " type="submit" class="btn btn-danger">Send</button>
           <button id="disconnect" class="hidden" type="submit">Disconnect</button>
         </div>
