--- a/src/main/resources/static/css/chatIndex.css
+++ b/src/main/resources/static/css/chatIndex.css
@@ -55,7 +55,9 @@
     padding: 35px 55px 35px;
     min-height: 250px;
     top: 50%;
-    left: 1000px;
+    /*left: 1000px;
+
+     */
     right: 0;
     margin: 0 auto;
     margin-top: -300px;
