--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -424,7 +424,11 @@
 
 
 <div id="chat-page" class="hidden">
-  <div class="container" style="width: 400px; height: 500px; left: 1200px" >
+  <div class="container" style="width: 400px; height: 500px;  max-width:400px;
+  width:100%;  position: fixed;
+  top: 80%;
+  left: 87.5%;
+  transform: translate(-50%, -50%);" >
     <div class="chat-header">
       <h5 th:text="| Live Chat Room for ${movieName} |" style="color: white">Live Chat </h5>
     </div>
