--- a/src/main/resources/static/css/chatIndex.css
+++ b/src/main/resources/static/css/chatIndex.css
@@ -13,7 +13,7 @@
 }
 
 
-.username-page-container {
+.container-sm {
     background: #fff;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
     border-radius: 2px;
