--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -406,8 +406,15 @@
 
 
 <div id="username-page">
-  <div class="username-page-container">
-    <h3 class="title" style="color: black; display: flex; justify-content: center;align-items: center;font-weight: bold;-webkit-text-stroke: 1px darkred;font-family: poppins;"  th:text="| The Live Chat Room for ${movieName} |">The Chatroom</h3>
+  <div class="container-sm" style="width: 400px; height: 150px;  max-width:400px;
+  width:100%;  position: fixed; background: black;
+  top:40%;
+  left: 87.5%;
+  transform: translate(-50%, -50%);  border-radius: 10px;
+    border: 0.1px solid black;
+    outline-style: solid;
+    outline-color: darkred;">
+    <h3 class="title" style="color: white; display: flex; justify-content: center;align-items: center;font-weight: bold;font-family: poppins sans-serif;"  th:text="| The Live Chat Room for ${movieName} |">The Chatroom</h3>
     <form  id="usernameForm" name="usernameForm">
       <div class="form-group">
         <input type="hidden" id="name" th:value="${#ctx.session.loggedInUser.getUsername()}" placeholder="Username" autocomplete="off" class="form-control" />
