--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -7,8 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 
     <style>
@@ -216,8 +214,6 @@
 </head>
 
 <body>
-
-
     <!-- Include the menu bar fragment -->
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
@@ -273,11 +269,16 @@
                                    class="remove_cart" rel="2">
                                     <i class="fa fa-heart" style="color: red"></i>
                                 </a>
+
                             </div>
 
+                            <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 10px;">
                             <a th:href="@{/writeReview(movieId=${movie.movieDb_id}, movieTitle=${movie.title})}">
                                 Write a Review
                             </a>
+
+                            <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreId()}"></span>
+                            </div>
 
                         </div>
                     </div>
