--- a/src/main/resources/templates/UserProfile.html
+++ b/src/main/resources/templates/UserProfile.html
@@ -107,7 +107,9 @@
                         <div class="mt-3">
                             <a href="/forgot_password" class="btn btn-danger">Update Password</a>
                         </div>
-
+                        <div class="mt-3">
+                            <a href="/orderHistory" class="btn btn-danger">Order History</a>
+                        </div>
                     </div>
                 </div>
             </div>
